# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
core/config/: __init__.py  loader.py
core/db/mongo/: session.py
core/db/mysql/: session.py  transactional.py
core/db/redis/: session.py
core/enum/: session_status.py  token_type.py
core/logger/: formatter.py  logger.py
core/patterns/: __init__.py
core/session/: __init__.py  jwt_manager.py  models.py  session_manager.py
docker/env/: docker-compose.yaml
tests/core/: pytest.ini  test-config.toml  test_config.py
tests/core/config/: test_config.py
tests/core/jwt/: test-config.toml  test_jwt.py
tests/core/logger/: test_logger.py
tests/core/mongo/: test-config.toml  test_mongo.py
tests/core/mysql/: customer_controller.py  models.py  test-config.toml  test_mysql.py
tests/core/redis/: test-config.toml  test_redis.py
tests/core/session/: test_session.py
