[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Chris Han <chriskr7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.23" }
aiomysql = "^0.2.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pymongo = "^4.6.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^2.5.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
